Initial commit with solution file

--- a/GUI/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/GUI/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-@inject SignInManager<IdentityUser> SignInManager
+@using GUI.Models
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
