--- a/GUI/Views/Home/Index.cshtml
+++ b/GUI/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using GUI.Areas.Identity.Pages.Account.Manage
 
-@inject SignInManager<IdentityUser> SignInManager
+@inject SignInManager<ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Forside";
@@ -12,7 +12,8 @@
     <div class="text-center">
         <h1>Velkommen</h1><p>@User.Identity?.Name</p>
         <h2>Du har nu følgende muligheder:</h2>
-        <a class="btn btn-outline-primary" href="#">Se dine chat</a>
+        <a class="btn btn-outline-primary" href="@Url.Action("Send", "Messages")">Start en chat</a>
+        <a class="btn btn-outline-primary" href="@Url.Action("Receive", "Messages")">Se dine beskeder</a>
         <a class="btn btn-outline-primary" asp-area="Identity" asp-page="/Account/Manage/Index">Indstillinger</a>
         <form style="padding-top:40px;" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button type="submit" class="btn btn-outline-primary">Log ud</button>
