--- a/GUI/Views/Home/Index.cshtml
+++ b/GUI/Views/Home/Index.cshtml
@@ -12,14 +12,34 @@
     <div class="text-center">
         <h1>Velkommen</h1><p>@User.Identity?.Name</p>
         <h2>Du har nu følgende muligheder:</h2>
-        <a class="btn btn-outline-primary" href="@Url.Action("Send", "Messages")">Start en chat</a>
-        <a class="btn btn-outline-primary" href="@Url.Action("Receive", "Messages")">Se dine beskeder</a>
-        <a class="btn btn-outline-primary" asp-area="Identity" asp-page="/Account/Manage/Index">Indstillinger</a>
-        <form style="padding-top:40px;" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button type="submit" class="btn btn-outline-primary">Log ud</button>
-        </form>
-    </div>
+        <a style="margin-bottom:40px" class="btn btn-outline-primary" href="@Url.Action("Send", "Messages")">Chat oversigt</a><br />
+        <div class="container-fluid">
+            <div class="custom-flex">
+                <a class="btn btn-outline-primary" asp-area="Identity" asp-page="/Account/Manage/Index">Indstillinger</a>
+                <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                    <button type="submit" class="btn btn-outline-primary">Log ud</button>
+                </form>
+            </div>
+        </div>
 
+
+
+    </div>
+    <style>
+        .custom-flex {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            margin-top: 20px;
+        }
+
+            .custom-flex .form-inline {
+                margin-left: 20px;
+            }
+
+
+    </style>
 }
 else
 {
