--- a/GUI/Views/Shared/_LoginMenu.cshtml
+++ b/GUI/Views/Shared/_LoginMenu.cshtml
@@ -5,6 +5,6 @@
 @if (SignInManager.IsSignedIn(User))
     {
     <li class="nav-item flex-grow-1">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Se chat</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Messages" asp-action="Send">Chat oversigt</a>
     </li>
     }
